--- a/vuestudy/package.json
+++ b/vuestudy/package.json
@@ -12,5 +12,9 @@
     "gulp": "^3.9.1",
     "gulp-load-plugins": "^1.5.0",
     "gulp-webserver": "^0.9.1"
+  },
+  "dependencies": {
+    "element-ui": "^1.3.7",
+    "vue": "^2.3.4"
   }
 }
